# michaeljoseph.github.io

./: .doit.db  .env  .gitignore  .gitmodules  .tool-versions  .travis.yml  404.html  CNAME  README.md  Rakefile  _config.yml  about.html  archive.html  atom.xml  conf.py  cv.html  cv.md  index.html  journal.txt  jrnl  justfile  main.py  maya-belle-josephs-birthday-party-2014.html  maya-belle-josephs-birthday-party-2014.md  mkdocs.yml  oss.md  perfection.html  projects.html  pyproject.toml  requirements.txt  resume.json  resume.yaml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  teaching-milan-to-program.html  todo.md  writeroom
2014/: index.html
_drafts/: earthsea.html
blog/: angry-post.html  atom.xml  excerpts.xml  happy-post.html  index.html  sad-post.html
categories/: history.html  history.xml  index.html  internet.html  internet.xml
docs/: ideas.md  index.md  resume.md  talks.md
galleries/: index.html  rss.xml
layouts/: default.html  index.less
listings/: .gitkeep.html  index.html
nikola/: conf.py
octopress_posts/: 2014-01-30-rambling.md  2014-02-06-aldous.md  2014-02-06-talking-funny.md  2014-02-10-teaching-milan-to-program.md  2014-02-17-finn.md  2014-02-25-old-men.md  2014-03-03-dbc.md  2014-03-06-robot-output.md  2014-03-09-badassdom.md  2014-03-10-abstraction.md  2014-03-10-automation.md  arthletes.md  batmanbegins.md  big.md  bud_in_a_jar.md  dipilatory.md  divorce.md  mouse.md  tennis-matches.md  tennis-rivalries.md  z-type.md
pages/: about.md  cv.md
plugins/: new_video.plugin  new_video.py
portfolio/: index.html
posts/: aldous.md  (+40 more)
(+108 files in other folders)
