[tool.poetry]
name = "michaeljoseph.github.io"
version = "0.1.0"
description = ""
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.1.9"
mkdocs-macros-plugin = "^0.5.12"
mkdocs-redirects = "^1.0.3"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
