[tool.poetry]
name = "michaeljoseph.github.io"
version = "0.1.0"
description = ""
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]
packages = [
    { include = "resume", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.3.0"
mkdocs-macros-plugin = "^0.5.12"
mkdocs-redirects = "^1.0.3"
mkdocs-git-revision-date-plugin = "^0.3.1"
toml = "^0.10.2"
"pyChart.JS" = "^0.3.0"
waybackpy = "^2.4.3"
mistune = {version = "3.0.0rc4", allow-prereleases = true}
pybadges = "^2.2.1"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
